# pixgentor-c

./: .gitmodules  CMakeLists.txt  README.md
pixgentor/: CMakeLists.txt  pixgentor.c
pixgentor/math/: CMakeLists.txt  math_vector2.c
pixgentor/math/include/pgt/: math_vector2.h
pixgentor/render/: CMakeLists.txt  render_buffers.c  render_buffers.h  render_shaders.c  render_shaders.h  render_texture.c  render_texture.h  render_viewport.c  render_viewport.h
pixgentor/render/include/pgt/: render_quads.h  render_shaders.h
pixgentor/render/shaders/: shader.frag
pixgentor/resources/shaders/: shader.frag  shader.vert
